[package]
name = "heic-converter"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
vcpkg = "0.2.15"

[dependencies]
libheif-rs = "0.15.0"
png = "0.17.7"
vcpkg = "0.2.15"
image_compressor = "1.3.0"